Try to fix form bar on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -326,6 +326,9 @@ textarea {
 input:focus ~ .bar:before, input:focus ~ .bar:after,
 textarea:focus ~ .bar:before, textarea:focus ~ .bar:after {
   width: 50%;
+  transition: 0.2s linear all;
+  -webkit-transition: 0.2s linear all;
+  -moz-transition: 0.2s linear all;
 }
 
 .input {
@@ -347,7 +350,7 @@ textarea:focus ~ .bar:before, textarea:focus ~ .bar:after {
   bottom: 0;
   content: '';
   background: #ff3a3a;
-  transition: 0.2s linear all; 
+  transition: 0.2s linear all;
   -webkit-transition: 0.2s linear all;
   -moz-transition: 0.2s linear all;
 }
